--- a/fftl-02-back-Nest/package.json
+++ b/fftl-02-back-Nest/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
@@ -67,6 +67,17 @@
       "js",
       "json",
       "ts"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "modulePaths": [
+      "<rootDir>/auth",
+      "<rootDir>/user",
+      "<rootDir>/board",
+      "<rootDir>/comment",
+      "<rootDir>/entities"
     ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
