--- a/fftl-02-back-Spring/src/main/resources/application.properties
+++ b/fftl-02-back-Spring/src/main/resources/application.properties
@@ -2,8 +2,12 @@
 #mysql connect
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fftl_02_commentboard?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/fftl_02_CommentBoard_spring?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jwt.secret=mysecretkey
+
+spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.format_sql=true
+logging.level.org.hibernate.type=trace 
