--- a/fftl-02-front/package.json
+++ b/fftl-02-front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "deploy": "git subtree push — prefix dist heroku master",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "v-axios": "^3.0.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.6",
