back: spring update

--- a/fftl-02-back-Spring/src/main/resources/application.properties
+++ b/fftl-02-back-Spring/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 #mysql connect
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fftl_02_CommentBoard_spring?serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://k4sctkrt2j240c4y:hcxxivkf5gm8trj1@ckshdphy86qnz0bj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/h9qu1a6ovrhsiucn?serverTimezone=Asia/Seoul
+spring.datasource.username=k4sctkrt2j240c4y
+spring.datasource.password=hcxxivkf5gm8trj1
 
 spring.jwt.secret=mysecretkey
 
