update: entities mapping update

--- a/fftl-02-back-Spring/src/main/resources/application.properties
+++ b/fftl-02-back-Spring/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.datasource.password=root
 
 spring.jwt.secret=mysecretkey
 
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.format_sql=true
 logging.level.org.hibernate.type=trace 
