--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fftl-02-front",
   "version": "0.1.0",
   "private": true,
+  "engines" : { "node" : ">=0.12" },
   "scripts": {
     "serve": "vue-cli-service serve",
     "deploy": "git subtree push — prefix dist heroku master",
