--- a/fftl-02-front/package.json
+++ b/fftl-02-front/package.json
@@ -2,7 +2,9 @@
   "name": "fftl-02-front",
   "version": "0.1.0",
   "private": true,
-  "engines" : { "node" : ">=0.12" },
+  "engines": {
+    "node": "13.1.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "deploy": "git subtree push — prefix dist heroku master",
