--- a/fftl-02-front/package.json
+++ b/fftl-02-front/package.json
@@ -2,6 +2,9 @@
   "name": "fftl-02-front",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "deploy": "git subtree push — prefix dist heroku master",
@@ -9,7 +12,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
