--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-**/application.properties
+**/src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
@@ -68,7 +68,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-!**/src/main/resources/
 
 ### NetBeans ###
 /nbproject/private/
